Rename to KinderForge
Signed-off-by: David Mulder <dmulder@samba.org>

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# MasteryForge Environment Configuration
+# KinderForge Environment Configuration
 # Copy this file to .env and customize for your deployment
 
 # Django Secret Key - CHANGE THIS IN PRODUCTION!
